--- a/src/App.scss
+++ b/src/App.scss
@@ -32,48 +32,84 @@ body {
 }
 
 header {
+    flex: 0 1 auto;
     margin: 0 auto;
     padding: 2rem;
 }
 
+main {
+    flex: 1 1 auto;
+}
 input {
     min-width: 25vw;
-    resize: horizontal;
     padding: 0.5rem;
     border-radius: 25rem;
     border: 3px solid var(--primary);
     margin: 0 2rem;
     font-size: 1em;
     transition: border-color 250ms;
+    background-color: var(--background);
     &:focus {
         outline: none;
         border-color: var(--secondary);
     }
 }
-
 .buttonList {
     padding: 2rem;
-    display: grid;
+    display: flex;
+    flex-wrap: wrap;
     gap: 0.5rem;
-    grid-template-columns: repeat(auto-fit, minmax(min(10rem, 100%), 1fr));
-    button {
-        border-radius: 0.25rem;
-        border: 1px solid transparent;
-        padding: 0.6em 1.2em;
-        font-size: 1em;
-        background-color: var(--secondary);
-        cursor: pointer;
-    }
 }
 
+footer {
+    flex: 0 1 auto;
+}
 .stop-sounds {
     display: block;
-    margin: auto;
-    border-radius: 0.25rem;
-    border: 1px solid transparent;
-    padding: 0.6em 1.2em;
+    margin: auto auto 1rem;
     font-size: 2em;
-    color-scheme: dark;
-    background-color: var(--primary);
     cursor: pointer;
+}
+
+dialog {
+    background-color: var(--background);
+    border: 3px solid var(--primary);
+    border-radius: 0.25rem;
+    width: 75ch;
+    margin: 2.5rem auto;
+    font-size: large;
+    header {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 1rem;
+        font-size: xx-large;
+        button {
+            font-size: 1.5em;
+            padding: 0 0.5rem;
+            float: right;
+            background-color: transparent;
+            border: none;
+            &:hover {
+                translate: 0 0;
+            }
+        }
+    }
+    form {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        input[type="file"] {
+            padding: 0.5rem;
+            border: 1px solid transparent;
+        }
+        input {
+            margin: 0 1rem;
+        }
+    }
+    footer {
+        display: flex;
+        flex-direction: row-reverse;
+        gap: 1rem;
+    }
 }
