--- a/src/App.scss
+++ b/src/App.scss
@@ -63,6 +63,12 @@ input {
     display: flex;
     flex-wrap: wrap;
     gap: 0.5rem;
+    button {
+        box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 1);
+        &:hover {
+            box-shadow: 5px 10px 5px 0px rgba(0, 0, 0, 1);
+        }
+    }
 }
 
 footer {
